# common_library

./: CMakeLists.txt  Config.cmake.cfg  LICENSE  README.md
.github/workflows/: pages.yml  static.yml
dataObject/: CMakeLists.txt  core.hpp  list.hpp  string.hpp  type.hpp
dataObject/include/: core.hpp  dataObject.hpp  list.hpp  string.hpp
dataObject/include/dataObject/: any.hpp  arithmetic.hpp  bool.hpp  core.hpp  dataObject.hpp  dict.hpp  dict_impl.hpp  double.hpp  float.hpp  functions.hpp  int.hpp  list.hpp  list_impl.hpp  list_old.hpp  print.hpp  string.hpp  test.hpp  type.hpp
dataObject/src/: List.cpp  String.cpp  any.cpp  arithmetic.cpp  bool.cpp  double.cpp  float.cpp  functions.cpp  int.cpp  string.cpp
doc/: Doxyfile  main.dox
doc/html/: annotated.html  annotated_dup.js  bool_8cpp_source.html  bool_8hpp.html  bool_8hpp__dep__incl.map  bool_8hpp__dep__incl.md5  bool_8hpp__incl.map  bool_8hpp__incl.md5  bool_8hpp_source.html  classdata_object_1_1_bool-members.html  classdata_object_1_1_bool.html  classdata_object_1_1_bool.js  classdata_object_1_1_bool__coll__graph.map  classdata_object_1_1_bool__coll__graph.md5  classdata_object_1_1_class_check-members.html  classdata_object_1_1_class_check.html  classdata_object_1_1_data_object-members.html  classdata_object_1_1_data_object.html  classdata_object_1_1_data_object.js  classdata_object_1_1_data_object__inherit__graph.map  classdata_object_1_1_data_object__inherit__graph.md5  classdata_object_1_1_double-members.html  classdata_object_1_1_double.html  classdata_object_1_1_double.js  classdata_object_1_1_double__coll__graph.map  classdata_object_1_1_double__coll__graph.md5  classdata_object_1_1_float-members.html  classdata_object_1_1_float.html  classdata_object_1_1_float.js  classdata_object_1_1_float__inherit__graph.map  classdata_object_1_1_float__inherit__graph.md5  classdata_object_1_1_int-members.html  classdata_object_1_1_int.html  classdata_object_1_1_int.js  classdata_object_1_1_int__inherit__graph.map  classdata_object_1_1_int__inherit__graph.md5  classdata_object_1_1_list-members.html  classdata_object_1_1_list.html  classdata_object_1_1_list.js  classdata_object_1_1_list__coll__graph.map  (+171 more)
docs/: Doxyfile.in  DoxygenLayout.xml
fileSystem/: CMakeLists.txt  fileSystem.hpp
fileSystem/include/fileSystem/: fileSystem.hpp  split.hpp
fileSystem/src/: file.cpp  fileExplorer.cpp  fileFunction.cpp  fileFunctions.cpp  split.cpp  textFile.cpp
formatter/: CMakeLists.txt
formatter/src/: formatter.cpp
html/html/: annotated.html  annotated_dup.js  any_8cpp_source.html  any_8hpp_source.html  arithmetic_8cpp_source.html  arithmetic_8hpp_source.html  bool_8cpp_source.html  bool_8hpp.html  bool_8hpp__dep__incl.map  bool_8hpp__dep__incl.md5  bool_8hpp__incl.map  bool_8hpp__incl.md5  bool_8hpp_source.html  classdata_object_1_1_any-members.html  classdata_object_1_1_any.html  classdata_object_1_1_any.js  classdata_object_1_1_any__coll__graph.md5  classdata_object_1_1_any__inherit__graph.map  classdata_object_1_1_arithmetic_object-members.html  classdata_object_1_1_arithmetic_object.html  classdata_object_1_1_arithmetic_object.js  classdata_object_1_1_arithmetic_object__coll__graph.md5  classdata_object_1_1_arithmetic_object__inherit__graph.dot  classdata_object_1_1_arithmetic_object__inherit__graph.map  classdata_object_1_1_bool-members.html  classdata_object_1_1_bool.html  classdata_object_1_1_bool__coll__graph.md5  classdata_object_1_1_bool__inherit__graph.map  classdata_object_1_1_data_object-members.html  classdata_object_1_1_data_object.html  classdata_object_1_1_data_object__inherit__graph.dot  classdata_object_1_1_data_object__inherit__graph.map  classdata_object_1_1_data_object__inherit__graph.md5  classdata_object_1_1_dict-members.html  classdata_object_1_1_dict.html  classdata_object_1_1_dict.js  classdata_object_1_1_dict__coll__graph.md5  classdata_object_1_1_dict__inherit__graph.map  classdata_object_1_1_double-members.html  classdata_object_1_1_double.html  (+337 more)
logSystem/: CMakeLists.txt
logSystem/include/: logSystem.hpp
logSystem/include/logSystem/: core.hpp  logSystem.hpp  print.hpp
logSystem/src/: logSystem.cpp
main/: Config.cmake.cfg  README.md  bool_8hpp__incl.dot  classdata_object_1_1_string-members.html  classdata_object_1_1_string.js  classdata_object_1_1_string__inherit__graph.dot  classfile_system_1_1_file_explorer__inherit__graph.dot  classfile_system_1_1_text_file__inherit__graph.dot  classformatter_1_1_formatter.html  classtime_system_1_1_datetime.js  classtime_system_1_1_time-members.html  data_object_2include_2data_object_2core_8hpp.html  data_object_8hpp__dep__incl.dot  datetime_8cpp_source.html  dir_000019_000001.html  dir_000020_000001.html  dir_037b359b6f59283af2e4af4d9aca7bd8_dep.dot  dir_09a3f5de0991353e96b0713821b92fb6.html  dir_3ce44b505d55aab5bcca00911b29e05b.html  dir_632556cab27d9c33877431b88f95403b.html  dir_711364886ffd9cc6be289ed1f934ba1e.html  dir_711364886ffd9cc6be289ed1f934ba1e_dep.dot  dir_a732e53396a1f3918ed7ce9c8ddc0f8f.js  dir_cd1e7d013fbf32b67323ddde82710e2b.js  dir_d3c576ff8e0916069e11cf7f87786d13.js  dir_e2ed69e711843a6a8d0a2b9801210244.js  files_dup.js  float_8hpp__incl.dot  formatter_8hpp_source.html  functions_8hpp__dep__incl.dot  functions_b.html  functions_c.html  functions_func_h.html  functions_func_l.html  functions_func_r.html  functions_func_y.html  functions_h.html  functions_p.html  functions_~.html  inherits.html  (+5 more)
main/docs/: CMakeLists.txt  main.dox
main/formatter/: CMakeLists.txt
main/main/: classdata_object_1_1_arithmetic_object.html  classdata_object_1_1_bool.js  classdata_object_1_1_float-members.html  classdata_object_1_1_float__inherit__graph.dot  classdata_object_1_1_list.js  classdata_object_1_1_type.html  classfile_system_1_1_file.html  classfile_system_1_1_file__coll__graph.dot  classformatter_1_1_formatter-members.html  classlog_system_1_1_print_system-members.html  classtime_system_1_1_datetime__coll__graph.dot  (+33 more)
timeSystem/: CMakeLists.txt
timeSystem/include/timeSystem/: timeSystem.hpp
timeSystem/src/: datetime.cpp  time.cpp
(+194 files in other folders)
